kube/chaincode-event-listener.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viriot-fabric-chaincode-event-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viriot-fabric-chaincode-event-listener
  template:
    metadata:
      labels:
        app: viriot-fabric-chaincode-event-listener
    spec:
      nodeSelector:
        viriot-zone-gw: "true"
        viriot-zone: "Japan"
      containers:
        - name: main
          image: viriot/chaincode-event-listener
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: viriot-fabric-chaincode-event-listener
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: viriot-fabric-chaincode-event-listener
