kube/vernemq-mqtt-org2.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vernemq-org2
  namespace: viriot-network
spec:
  serviceName: vernemq-org2
  replicas: 2
  selector:
    matchLabels:
      app: vernemq-org2
  template:
    metadata:
      labels:
        app: vernemq-org2
    spec:
      nodeSelector:
        viriot-zone-gw: "true"
      shareProcessNamespace: true
      serviceAccountName: vernemq
      containers:
      - name: vernemq
        image: erlio/docker-vernemq:1.9.1
        ports:
        - containerPort: 1883
          name: mqttlb
        - containerPort: 1883
          name: mqtt
        - containerPort: 4369
          name: epmd
        - containerPort: 44053
          name: vmq
        - containerPort: 8888
          name: vernemq-ext
        - containerPort: 9100
        - containerPort: 9101
        - containerPort: 9102
        - containerPort: 9103
        - containerPort: 9104
        - containerPort: 9105
        - containerPort: 9106
        - containerPort: 9107
        - containerPort: 9108
        - containerPort: 9109
---
apiVersion: v1
kind: Service
metadata:
  name: vernemq-org2
  labels:
    app: vernemq-org2
spec:
  clusterIP: None
  selector:
    app: vernemq-org2
  ports:
  - port: 4369
    name: epmd
  - port: 44053
    name: vmq
---
apiVersion: v1
kind: Service
metadata:
  name: vernemq-org2
  labels:
    app: vernemq-org2
spec:
  selector:
    app: vernemq-org2
  ports:
  - port: 1883
    name: vernemq-org2
