kube/history-listener.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viriot-fabric-history-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viriot-fabric-history-listener
  template:
    metadata:
      labels:
        app: viriot-fabric-history-listener
    spec:
      nodeSelector:
        viriot-zone-gw: "true"
        viriot-zone: "Japan"
      containers:
        - name: main
          image: viriot/history-listener
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: viriot-fabric-history-listener
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: viriot-fabric-history-listener

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
  labels:
    app: viriot-fabric-history-listener
  name: viriot-fabric-history-listener
spec:
  ingressClassName: nginx
  rules:
    - host: viriot-fabric-history-listener.vcap.me
      http:
        paths:
          - backend:
              service:
                name: viriot-fabric-history-listener
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
