kube/master-controller.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viriot-master-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viriot-master-controller
  template:
    metadata:
      labels:
        app: viriot-master-controller
    spec:
      containers:
        - name: main
          image: viriot/mastercontroller-on-fabric
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
        - name: redis
          image: redis:6.2.5
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: viriot-master-controller
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: viriot-master-controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
  labels:
    app: viriot-master-controller
  name: viriot-master-controller
spec:
  ingressClassName: nginx
  rules:
    - host: viriot-master-controller.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: viriot-master-controller
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
