kube/transaction-monitor.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viriot-fabric-transaction-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viriot-fabric-transaction-monitor
  template:
    metadata:
      labels:
        app: viriot-fabric-transaction-monitor
    spec:
      nodeSelector:
        viriot-zone-gw: "true"
        viriot-zone: "Japan"
      containers:
        - name: main
          image: viriot/transaction-monitor
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
        - name: cache
          image: redis:6.2.5
          ports:
            - containerPort: 6379
          args:
            - "--port"
            - "6379"
---
apiVersion: v1
kind: Service
metadata:
  name: viriot-fabric-transaction-monitor
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: viriot-fabric-transaction-monitor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
  labels:
    app: viriot-fabric-transaction-monitor
  name: viriot-fabric-transaction-monitor
spec:
  ingressClassName: nginx
  rules:
    - host: viriot-fabric-transaction-monitor.vcap.me
      http:
        paths:
          - backend:
              service:
                name: viriot-fabric-transaction-monitor
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
